Puzzle generation and date at  12AM PST globally. Start date changed to 7/21/25. Fixed issue where place holder text briefly visible on welcome modal. Fixed accidental logo hover effect.

--- a/src/style.css
+++ b/src/style.css
@@ -655,6 +655,11 @@ h3 {
   border-radius: var(--default-card-border-radius);
 }
 
+#welcome-modal .cell .card.top:hover {
+  transform: scale(1) translate(-35%, -35%);
+}
+
+
 
 #welcome-modal h2 {
   font-size: 3.6rem;
